--- a/source/sass/blocks/catalog-item.scss
+++ b/source/sass/blocks/catalog-item.scss
@@ -36,15 +36,18 @@
 
   @media (hover: hover) and (pointer: fine) {
     &:hover .catalog-description {
+      transition: box-shadow 0.2s;
       box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
     }
 
     &:active .catalog-description {
+      transition: box-shadow 0.2s;
       box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
     }
   }
 
   &:has(.catalog-item__button:active) .catalog-description {
+    transition: box-shadow 0.2s;
     box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
   }
 }
