--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -55,17 +55,19 @@
 }
 
 .social-list__logo {
-  &:hover {
-    path {
-      transition: 0.2s;
-      fill: #46c1ae;
+  @media (hover: hover) and (pointer: fine) {
+    &:hover {
+      path {
+        transition: 0.2s;
+        fill: #46c1ae;
+      }
     }
-  }
 
-  &:active {
-    path {
-      transition: 0.1s;
-      fill-opacity: 0.3;
+    &:active {
+      path {
+        transition: 0.1s;
+        fill-opacity: 0.3;
+      }
     }
   }
 }
