--- a/source/sass/blocks/catalog-title.scss
+++ b/source/sass/blocks/catalog-title.scss
@@ -1,13 +1,15 @@
 @use "../global/variables.scss";
 
 .catalog-title__link {
-  &:hover {
-    transition: 0.2s;
-    opacity: 0.6;
-  }
+  @media (hover: hover) and (pointer: fine) {
+    &:hover {
+      transition: 0.2s;
+      opacity: 0.6;
+    }
 
-  &:active {
-    transition: 0.2s;
-    opacity: 0.3;
+    &:active {
+      transition: 0.2s;
+      opacity: 0.3;
+    }
   }
 }
