--- a/source/sass/blocks/color.scss
+++ b/source/sass/blocks/color.scss
@@ -88,34 +88,36 @@
   display: block;
 }
 
-.color__label:hover {
-  .color__description::before {
+@media (hover: hover) and (pointer: fine) {
+  .color__label:hover {
+    .color__description::before {
+      transition: border-color 0.2s;
+      border-color: #62d1ba;
+    }
+  }
+
+  .color__input:focus-visible + .color__description::before {
+    outline: 2px solid #000000;
+    outline-offset: 3px;
     transition: border-color 0.2s;
     border-color: #62d1ba;
   }
-}
 
-.color__input:focus-visible + .color__description::before {
-  outline: 2px solid #000000;
-  outline-offset: 3px;
-  transition: border-color 0.2s;
-  border-color: #62d1ba;
-}
-
-.color__label:active {
-  .color__description::before {
-    transition: border-color 0.2s;
-    border-color: rgba(0, 0, 0, 0.3);
-    outline: none;
+  .color__label:active {
+    .color__description::before {
+      transition: border-color 0.2s;
+      border-color: rgba(0, 0, 0, 0.3);
+      outline: none;
+    }
   }
-}
 
-.color__label:has(.color__input:disabled) {
-  opacity: 0.5;
-}
+  .color__label:has(.color__input:disabled) {
+    opacity: 0.5;
+  }
 
-.color__label:hover:has(.color__input:disabled) {
-  .color__description::before {
-    border-color: #444444;
+  .color__label:hover:has(.color__input:disabled) {
+    .color__description::before {
+      border-color: #444444;
+    }
   }
 }
