--- a/source/sass/blocks/production.scss
+++ b/source/sass/blocks/production.scss
@@ -29,12 +29,14 @@
     @media (min-width: variables.$screen-tablet) {
       order: 1;
 
-      &:hover + .production__container--description {
-        box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
-      }
+      @media (hover: hover) and (pointer: fine) {
+        &:hover + .production__container--description {
+          box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
+        }
 
-      &:active + .production__container--description {
-        box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
+        &:active + .production__container--description {
+          box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
+        }
       }
     }
 
@@ -44,17 +46,19 @@
       flex-grow: 1;
     }
 
-    &:hover .video__button {
-      transition: width 0.15s;
-      width: 121px;
-      height: 92px;
-    }
+    @media (hover: hover) and (pointer: fine) {
+      &:hover .video__button {
+        transition: width 0.15s;
+        width: 121px;
+        height: 92px;
+      }
 
-    &:active .video__button {
-      width: 81px;
-      height: 62px;
-      opacity: 0.3;
-      transition: all 0.15s;
+      &:active .video__button {
+        width: 81px;
+        height: 62px;
+        opacity: 0.3;
+        transition: all 0.15s;
+      }
     }
   }
 
@@ -67,12 +71,16 @@
       border: 1px solid #ececec;
       padding-bottom: 46px;
 
-      &:hover {
-        box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
-      }
+      @media (hover: hover) and (pointer: fine) {
+        &:hover {
+          transition: box-shadow 0.2s;
+          box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
+        }
 
-      &:active {
-        box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
+        &:active {
+          transition: box-shadow 0.2s;
+          box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
+        }
       }
     }
 
