--- a/source/sass/blocks/slider-buttons.scss
+++ b/source/sass/blocks/slider-buttons.scss
@@ -27,11 +27,13 @@
     border: none;
   }
 
-  &:hover {
-    opacity: 0.6;
-  }
+  @media (hover: hover) and (pointer: fine) {
+    &:hover {
+      opacity: 0.6;
+    }
 
-  &:active {
-    opacity: 0.3;
+    &:active {
+      opacity: 0.3;
+    }
   }
 }
