--- a/source/sass/blocks/type-list.scss
+++ b/source/sass/blocks/type-list.scss
@@ -66,7 +66,7 @@
     &::after {
       width: 22px;
       height: 22px;
-      left: 15.2px;
+      left: 14px;
       top: 14px;
     }
   }
@@ -92,33 +92,35 @@
   display: block;
 }
 
-.type-list__label:hover {
-  .type-list__description::before {
+@media (hover: hover) and (pointer: fine) {
+  .type-list__label:hover {
+    .type-list__description::before {
+      transition: border-color 0.2s;
+      border-color: #62d1ba;
+    }
+  }
+
+  .type-list__label:active {
+    .type-list__description::before {
+      transition: border-color 0.2s;
+      border-color: rgba(0, 0, 0, 0.3);
+    }
+  }
+
+  .type-list__input:focus-visible + .type-list__description::before {
+    outline: 2px solid #000000;
+    outline-offset: 3px;
     transition: border-color 0.2s;
     border-color: #62d1ba;
   }
-}
 
-.type-list__label:active {
-  .type-list__description::before {
-    transition: border-color 0.2s;
-    border-color: rgba(0, 0, 0, 0.3);
+  .type-list__label:has(.type-list__input:disabled) {
+    opacity: 0.5;
   }
-}
 
-.type-list__input:focus-visible + .type-list__description::before {
-  outline: 2px solid #000000;
-  outline-offset: 3px;
-  transition: border-color 0.2s;
-  border-color: #62d1ba;
-}
-
-.type-list__label:has(.type-list__input:disabled) {
-  opacity: 0.5;
-}
-
-.type-list__label:hover:has(.type-list__input:disabled) {
-  .type-list__description::before {
-    border-color: #444444;
+  .type-list__label:hover:has(.type-list__input:disabled) {
+    .type-list__description::before {
+      border-color: #444444;
+    }
   }
 }
