--- a/source/sass/blocks/type-products.scss
+++ b/source/sass/blocks/type-products.scss
@@ -46,34 +46,40 @@
   }
 
   &--interior {
-    &:hover::before {
-      transition: 0.2s;
-      transform: translateY(-5px);
+    @media (hover: hover) and (pointer: fine) {
+      &:hover::before {
+        transition: 0.2s;
+        transform: translateY(-5px);
+      }
     }
   }
 
   &--toys {
-    &:hover::before {
-      transition: 0.2s;
-      transform: translateY(-5px);
+    @media (hover: hover) and (pointer: fine) {
+      &:hover::before {
+        transition: 0.2s;
+        transform: translateY(-5px);
+      }
     }
   }
 
-  &:hover {
-    .hero-link__title {
-      transition: 0.2s;
-      transform: translateY(-5px);
+  @media (hover: hover) and (pointer: fine) {
+    &:hover {
+      .hero-link__title {
+        transition: 0.2s;
+        transform: translateY(-5px);
+      }
+
+      .hero-link__title::after {
+        opacity: 0.7;
+      }
     }
 
-    .hero-link__title::after {
-      opacity: 0.7;
-    }
-  }
-
-  &:active {
-    .hero-link__title::after {
-      transition: 0.2s;
-      opacity: 0.3;
+    &:active {
+      .hero-link__title::after {
+        transition: 0.2s;
+        opacity: 0.3;
+      }
     }
   }
 }
