--- a/source/sass/blocks/transparent-button.scss
+++ b/source/sass/blocks/transparent-button.scss
@@ -4,6 +4,7 @@
   padding: 16px;
   color: #444444;
   text-align: center;
+  font-family: variables.$font-ptsans;
   font-weight: 700;
   font-size: 18px;
   line-height: 20px;
