--- a/source/sass/blocks/mail-link.scss
+++ b/source/sass/blocks/mail-link.scss
@@ -1,5 +1,21 @@
 @use "../global/variables.scss";
 
+.mail-link {
+  @media (hover: hover) and (pointer: fine) {
+    &:hover {
+      transition: 0.2s;
+      color: #62d1ba;
+    }
+
+    &:active {
+      .mail-link__text {
+        transition: 0.1s;
+        text-decoration-color: rgba(98, 209, 186, 0.1);
+      }
+    }
+  }
+}
+
 .mail-link__text {
   position: relative;
   word-break: break-all;
