--- a/source/sass/blocks/hero-link.scss
+++ b/source/sass/blocks/hero-link.scss
@@ -3,6 +3,26 @@
 .hero-link {
   display: flex;
   cursor: pointer;
+
+  @media (hover: hover) and (pointer: fine) {
+    &:hover {
+      .hero-link__title {
+        transition: 0.2s;
+        transform: translateY(-5px);
+      }
+
+      .hero-link__title::after {
+        opacity: 0.7;
+      }
+    }
+
+    &:active {
+      .hero-link__title::after {
+        transition: 0.2s;
+        opacity: 0.3;
+      }
+    }
+  }
 }
 
 .hero-link__title {
