--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -4,6 +4,21 @@
 .video {
   width: 100%;
   position: relative;
+
+  @media (hover: hover) and (pointer: fine) {
+    &:hover .video__button {
+      transition: width 0.15s;
+      width: 121px;
+      height: 92px;
+    }
+
+    &:active .video__button {
+      width: 81px;
+      height: 62px;
+      opacity: 0.3;
+      transition: all 0.15s;
+    }
+  }
 }
 
 .video__picture {
