--- a/source/sass/blocks/list-secondary.scss
+++ b/source/sass/blocks/list-secondary.scss
@@ -10,10 +10,10 @@
 
   @media (min-width: variables.$screen-desktop) {
     width: 390px;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    scroll-snap-type: x mandatory;
-    flex-wrap: nowrap;
+    // overflow-x: scroll;
+    // overflow-y: hidden;
+    // scroll-snap-type: x mandatory;
+    // flex-wrap: nowrap;
   }
 }
 
